--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,11 @@
 }
 
 .header {
+  display: -webkit-box;
   display: flex;
+  -webkit-box-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
   justify-content: space-between;
 }
 
@@ -21,4 +24,37 @@
   width: 690px;
   font-size: 16px;
   line-height: 24px;
+  background-image: url(../img/home.svg);
+  background-repeat: no-repeat;
+  background-position: left 11px center;
+  padding-left: 35px;
+}
+.buttons{
+  display: flex;
+  align-items:center;
+}
+
+.button {
+  display: flex;
+  align-items:center;
+  padding: 8px 16px;
+  background: #FFFFFF;
+  border: 1px solid #D9D9D9;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.0015);
+  border-radius: 2px;
+  color: #595959;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.button-primary{
+  background: #1890FF;
+  border: 1px solid #1890FF;
+  color: #fff;
+  margin-right: 10px;
+}
+
+.button-icon{
+  margin-right: 6px;
 }
