--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   margin-bottom: 40px;
 }
 
-.search-input {
+.input-adress {
   background: #FFFFFF;
   border: 1px solid #D9D9D9;
   border-radius: 2px;
