--- a/css/style.css
+++ b/css/style.css
@@ -22,18 +22,28 @@ body {
   margin-bottom: 40px;
 }
 
-.input-address {
+.input {
   background: #FFFFFF;
   border: 1px solid #D9D9D9;
   border-radius: 2px;
-  height: 40px;
-  width: 690px;
   font-size: 16px;
   line-height: 24px;
-  background-image: url(../img/home.svg);
+  padding: 8px;
   background-repeat: no-repeat;
   background-position: left 11px center;
   padding-left: 35px;
+}
+
+.input-address {
+  width: 690px;
+  background-image: url(../img/home.svg);
+
+}
+
+.input-search {
+  width: 306px;
+  background-image: url(../img/search.svg);
+
 }
 
 .buttons {
@@ -71,6 +81,7 @@ body {
   background: #FFF1B8 url(../img/promo-image.png) no-repeat top -315px right -95px / 800px;
   border-radius: 10px;
   padding: 68px 70px;
+  margin-bottom: 56px;
 }
 
 .promo-title {
@@ -88,5 +99,113 @@ body {
   font-weight: normal;
   font-size: 24px;
   line-height: 28px;
+}
 
+.section-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 44px;
+}
+
+.section-titel {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  margin: 0;
+}
+
+/* Cards */
+.cards {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
+  border-radius: 7px;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.card-image {
+  width: 384px;
+  height: 250px;
+  object-fit: cover;
+}
+
+.card-text {
+  padding: 20px 23px 35px 24px;
+}
+
+.card-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-title {
+  margin: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.card-tag {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 20px;
+  color: #ffffff;
+  background: #262626;
+  border-radius: 2px;
+  padding: 1px 8px;
+}
+
+.card-info {
+  display: flex;
+  align-items: center;
+}
+
+.rating {
+  margin-right: 26px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFC107;
+}
+
+.price,
+.category {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 32px;
+  color: #8C8C8C;
+}
+
+.price {
+  margin-right: 10px;
+}
+.category{
+  
+}
+.price:after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  background:#8C8C8C;
+  display: inline-block;
+  vertical-align: middle;
+  border-radius:50%;
+  margin-left: 10px;
+}
+.rating-star{
+  margin-right: 8px;
 }
