--- a/css/style.css
+++ b/css/style.css
@@ -186,13 +186,15 @@ body {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  
+
 }
-.card-buttons{
+
+.card-buttons {
   display: flex;
   align-items: center;
   margin-top: 24px;
 }
+
 .card-price-bold {
   font-style: normal;
   font-weight: bold;
@@ -292,6 +294,118 @@ body {
   margin-right: 21px;
 }
 
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+.is-open{
+  display: flex;
+}
+
+.modal-dialog {
+  max-width: 780px;
+  width: 95%;
+  background: #FFFFFF;
+  border-radius: 5px;
+  margin: auto;
+  padding: 40px 45px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 45px;
+}
+
+.modal-title {
+  margin: 0;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.close {
+  font-size: 36px;
+  border: none;
+  background-color: transparent;
+}
+
+.food-row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #D9D9D9;
+  margin-bottom: 15px;
+}
+
+.food-name {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 32px;
+}
+
+.food-price {
+  margin-left: auto;
+  margin-right: 47px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 32px;
+}
+
+.food-counter {
+  display: flex;
+  align-items: center;
+  font-weight: normal;
+}
+
+.counter-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #FFFFFF;
+  border: 1px solid #40A9FF;
+  box-sizing: border-box;
+  border-radius: 2px;
+  width: 39px;
+  height: 32px;
+  font-size: 14px;
+  line-height: 22px;
+  color: #40A9FF;
+}
+
+.counter {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.modal-body{
+  margin-bottom: 52px;
+}
+.modal-footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.modal-pricetag{
+  background: #262626;
+border-radius: 5px;
+padding: 15px 20px;
+color:#fff;
+}
+.footer-buttons{
+  display: flex;
+  align-items: center;
+}
+
 @media (max-width: 1366px) {
   .container {
     max-width: 960px;
@@ -354,10 +468,12 @@ body {
   .card-title {
     font-size: 18px;
   }
-  .card .rating{
-    flex-basis: 100%;;
+
+  .card .rating {
+    flex-basis: 100%;
+    ;
   }
- 
+
   .promo-title {
     font-size: 24px;
     line-height: 1.4;
